--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,13 @@ a {
     text-decoration: none;
     color: #212121;
 }
+body {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    background: #E5E5E5;
+}
 p {
     color: #757575;
     font-family: 'Roboto';
@@ -18,6 +25,17 @@ nav {
     letter-spacing: 0.02em;
     color: #212121;
 }
+.text {
+    color: rgba(230, 60, 107, .3);
+}
+.bg {
+    position: absolute;
+    width: 100%;
+    height: 600px;
+    left: -4px;
+    top: 80px;
+    background: #2F303A;
+}
 .link {
    color: #212121;
    text-decoration: none 
@@ -33,4 +51,7 @@ nav {
 }
 .over:focus {
     color: orange;
+}
+#article-1 {
+    font-size: 24px;
 }
